Fix session drawer to fit title, action triple-dot in width on mobile

--- a/src/interface/web/app/components/sidePanel/sidePanel.module.css
+++ b/src/interface/web/app/components/sidePanel/sidePanel.module.css
@@ -143,7 +143,8 @@ div.modalSessionsList div.session {
 
     div.session.compressed {
         max-width: 100%;
-        display: flex;
+        display: grid;
+        grid-template-columns: 70vw auto;
         justify-content: space-between;
     }
 
